test/regression/src/test/idl/compiler/fail/defined.idl
#if !defined BLUB
#error "blub not defined"
#endif

struct foo
{
    long value;
};